--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -12,18 +12,16 @@
   <DT>17 дек:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Буры по бетону для перфоратора SDS Plus HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
   <DT>10 дек:  <DD><a href="/catalog/cat171.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Лестницы-стремянки раздвижные трехсекционные"><span class="title">Лестницы</span></a>, <a href="/catalog/cat170.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стремянки алюминиевые"><span class="title">стремянки</span><span class="dop"></span></a><br>
   <DT>09 дек:  <DD><a href="/catalog/cat29.shtml"  title="Новый товар:&#xa;Пильный диск для УШМ универсальный 125 x 3Т x 22.23 мм RUNNER"><span class="title">Пильный диск для УШМ</span><span class="dop"> RUNNER</span></a><br>
-  <DT>04 дек:  <DD><a href="/catalog/cat380.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гаечные ключи</span><span class="dop"> кольцевые</span></a><br>
-  <DT>02 дек:  <DD><a href="/catalog/cat197.shtml" title="Новый товар:&#xa;Батарейки алкалиновые ААА GP24A-2CR4, 4 шт. в блистере"><span class="title">Батарейки алкалиновые</span><span class="dop"> ААА</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/drill/big/cobalt-sverlo.jpg" title="Большое фото: Твердосплавные свёрла по металлу">
+        href="/img/pic/drill/big/cobalt-sverlo.jpg" title="Большое фото: Твердосплавные свёрла по металлу 'HAGWERT'">
         <img src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat415.shtml"
-        title="Большое фото: Твердосплавные свёрла по металлу на нашем сайте">
+        title="Большое фото: Твердосплавные свёрла по металлу 'HAGWERT' на нашем сайте">
         <p>
           <span class="title">Твердосплавные свёрла по металлу</span><span class="dop"><br>HAGWERT<br>"Power-Сobalt"</span>
           <span class="addt"><br>фрезерованные шлифованные</span>
@@ -31,39 +29,34 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/instr/big/570519.jpg" title="Большое фото: Рулетки EFFECTA">
-        <img src="/img/pic/instr/small/570519.jpg" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat72.shtml"
-        title="Рулетки EFFECTA на нашем сайте">
-        <p>
-          <span class="title">Строительные рулетки</span><span class="dop"> EFFECTA:</span>
-          <span class="addt"><br>ударопрочный обрезиненный корпус,<br>неодимовые магниты,<br>доп. боковые зацепы</span>
-        </p></a></td></table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
         href="/img/pic/abraz/big/Krug%20Luga.jpg" title="Большое фото: Круги отрезные по металлу (Луга)">
         <img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat24.shtml"
-        title="Круги отрезные по металлу (Луга) на нашем сайте">
+        title="Круги отрезные по металлу (пр-во г. Луга) на нашем сайте">
         <p>
           <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода),</span>
           <span class="addt"><br>разные размеры</span>
         </p></a></td></table>
   <table class="one-good" cellpadding="0">
-  <tr valign="top">
-    <td align="center" width=1><a class="cboxElement"
-      href="/img/pic/strhoz/big/19-0-210.jpg" title="Большое фото: Нож 18 мм с выдвижным лезвием 'Модерн'">
-      <img src="/img/pic/strhoz/small/19-0-210.jpg" width="98"></a></td>
-    <td class="good-txt"><a href="/catalog/cat107.shtml"
-      title="Нож 18 мм с выдвижным лезвием 'Модерн' на нашем сайте">
-      <p>
-        <span class="title">Профессиональный строительный нож </span><span class="dop">"Модерн",</span>
-        <span class="addt"> 18&#8239;мм, выдвижное лезвие, винтовой фиксатор, сталь 60Г</span>
-      </p></a></td></table>
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/drill/big/bury-hagwert.jpg" title="Большое фото: Буры по бетону для перфоратора SDS+ 'HAGWERT'">
+        <img src="/img/pic/drill/small/bury-hagwert.jpg" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat414.shtml"
+        title="Буры по бетону для перфоратора SDS+ 'HAGWERT' на нашем сайте">
+        <p>
+          <span class="title">Твердосплавные буры по бетону<br>для перфоратора SDS+</span><span class="dop"> HAGWERT,</span>
+          <span class="addt"><br>разные размеры</span>
+        </p></a></td></table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/drill/big/Koronka po keramike art 576230 newe ru.jpg" title="Большое фото: Алмазные коронки по керамограниту и керамике 'HAGWERT'">
+        <img src="/img/pic/drill/small/Koronka po keramike art 576230 newe ru.jpg" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat420.shtml"
+        title="Свёрла и коронки по стеклу и керамике на нашем сайте">
+        <p>
+          <span class="title">Алмазные коронки по керамограниту<br>и керамике</span><span class="dop"> HAGWERT</span>
+          <span class="addt"><br>в сборе с центрирующим сверлом</span>
+        </p></a></td></table>
 </div>
-
-Убери нож модерн
-Добавь буры Хагверт
-убери рулетку
-Добавь алмазные коронки по керамике
