--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>04 дек:  <DD><a href="/catalog/cat380.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гаечные ключи</span><span class="dop"> кольцевые</span></a><br>
+  <DT>02 дек:  <DD><a href="/catalog/cat197.shtml" title="Новый товар:&#xa;Батарейки алкалиновые ААА GP24A-2CR4, 4 шт. в блистере"><span class="title">Батарейки алкалиновые</span><span class="dop"> ААА</span></a><br>
   <DT>25 ноя:  <DD><a href="/catalog/cat151.shtml" title="Расширен ассортимент:&#xa;Шпатель фасадный нержавеющий 450 мм &laquo;FLAT&raquo;"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
   <DT>15 ноя:  <DD><a href="/catalog/cat420.shtml" title="Значительно расширен ассортимент:&#xa;Свёрла и алмазные коронки (в сборе) по стеклу, керамограниту и керамике"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>12 ноя:  <DD><a href="/catalog/cat155.shtml" title="Значительно расширен ассортимент:&#xa;Гладилки из нержавеющей стали, прямая и зубчатые"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
@@ -787,3 +789,25 @@
         </p></a>
   </table>
 </div>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/strhoz/big/19-0-210.jpg" title="Большое фото: Нож 18 мм с выдвижным лезвием 'Модерн'">
+      <img src="/img/pic/strhoz/small/19-0-210.jpg" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat107.shtml"
+      title="Нож 18 мм с выдвижным лезвием 'Модерн' на нашем сайте">
+      <p>
+        <span class="title">Профессиональный строительный нож </span><span class="dop">"Модерн",</span>
+        <span class="addt"> 18&#8239;мм, выдвижное лезвие, винтовой фиксатор, сталь 60Г</span>
+      </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/instr/big/570519.jpg" title="Большое фото: Рулетки EFFECTA">
+      <img src="/img/pic/instr/small/570519.jpg" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat72.shtml"
+      title="Рулетки EFFECTA на нашем сайте">
+      <p>
+        <span class="title">Строительные рулетки</span><span class="dop"> EFFECTA:</span>
+        <span class="addt"><br>ударопрочный обрезиненный корпус,<br>неодимовые магниты,<br>доп. боковые зацепы</span>
+      </p></a></td></table>
