--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 фев:  <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
   <DT>03 фев:  <DD><a href="/catalog/cat109.shtml" title="Снижены цены: Маркер-краски 'Металлическая краска'&#xa;                              ультра-стойкие, толщина линии 2,2-2,8 мм&#xa;Новые товары:  Маркеры перманентные промышленные&#xa;                              EDDING E-300, толщина линии 1.5-3.0 мм"><span class="title">Строительные маркеры</span></a><br>
   <DT>31 янв:  <DD><a href="/catalog/cat206.shtml" title="Новый товар:&#xa;Молоток-гвоздодер 500 г VOLKSHAMMER, стеклопластиковая рукоятка"><span class="title">Молоток-гвоздодер</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
   <DT>30 янв:  <DD><a href="/catalog/cat151.shtml" title="Снижены цены:&#xa;Шпательные лопатки из нержавеющей стали, 100 мм"><span class="title">Шпательные лопатки</span><span class="dop"> 100 мм</span></a><br>
