--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 фев:  <DD><a href="/catalog/cat425.shtml" title="Новые товары:&#xa;Заклепки «слепые» вытяжные алюминиевые для сквозных и глухих отверстий"><span class="title">Заклепки вытяжные</span><span class="dop"></span></a><br>
+  <DT>19 фев:  <DD><a href="/catalog/cat105.shtml" title="Новый товар:&#xa;Тачка строительная двухколесная низкопольная"><span class="title">Строительные тачки</span><span class="dop"></span></a><br>
   <DT>13 фев:  <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
   <DT>03 фев:  <DD><a href="/catalog/cat109.shtml" title="Снижены цены: Маркер-краски 'Металлическая краска'&#xa;                              ультра-стойкие, толщина линии 2,2-2,8 мм&#xa;Новые товары:  Маркеры перманентные промышленные&#xa;                              EDDING E-300, толщина линии 1.5-3.0 мм"><span class="title">Строительные маркеры</span></a><br>
   <DT>31 янв:  <DD><a href="/catalog/cat206.shtml" title="Новый товар:&#xa;Молоток-гвоздодер 500 г VOLKSHAMMER, стеклопластиковая рукоятка"><span class="title">Молоток-гвоздодер</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
@@ -10,9 +12,6 @@
   <DT>27 дек:  <DD><a href="/catalog/cat142.shtml" title="Цены снижены:&#xa;Валики из искусственного меха,&#xa;ворс 12-14 мм, диаметр корпуса 40 мм"><span class="title">Валики</span><span class="dop"> из искусственного меха</span></a><br>
   <DT>26 дек:  <DD><a href="/catalog/cat278.shtml" title="Новые товары:&#xa;Провод ПВС белый медный гибкий ГОСТ"><span class="title">Провод ПВС медный</span><span class="dop"> ГОСТ</span></a><br>
   <DT>25 дек:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые VOLKSHAMMER со стеклопластиковой рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> VOLKSHAMMER</span></a><br>
-  <DT>17 дек:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Буры по бетону для перфоратора SDS Plus HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
-  <DT>10 дек:  <DD><a href="/catalog/cat171.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Лестницы-стремянки раздвижные трехсекционные"><span class="title">Лестницы</span></a>, <a href="/catalog/cat170.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стремянки алюминиевые"><span class="title">стремянки</span><span class="dop"></span></a><br>
-  <DT>09 дек:  <DD><a href="/catalog/cat29.shtml"  title="Новый товар:&#xa;Пильный диск для УШМ универсальный 125 x 3Т x 22.23 мм RUNNER"><span class="title">Пильный диск для УШМ</span><span class="dop"> RUNNER</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
