--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>05 мар:  <DD><a href="/catalog/cat175.shtml" title="Новые товары:&#xa;Пена монтажная PENOSIL Premium, ручная и пистолетная, 750 мл"><span class="title">Пена монтажная</span></a> и <a href="/catalog/cat194.shtml" title="Новый товар:&#xa;Очиститель для монтажной пены ULTIMA, 500 мл"><span class="title">очиститель</span><span class="dop"></span></a><br>
+  <DT>04 мар:  <DD><a href="/catalog/cat295.shtml" title="Новые товары:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл, разные цвета"><span class="title">Аэрозольная эмаль</span><span class="dop"> ULTIMA</span></a><br>
   <DT>20 фев:  <DD><a href="/catalog/cat425.shtml" title="Новые товары:&#xa;Заклепки «слепые» вытяжные алюминиевые для сквозных и глухих отверстий"><span class="title">Заклепки вытяжные</span><span class="dop"></span></a><br>
   <DT>19 фев:  <DD><a href="/catalog/cat105.shtml" title="Новый товар:&#xa;Тачка строительная двухколесная низкопольная"><span class="title">Строительные тачки</span><span class="dop"></span></a><br>
   <DT>13 фев:  <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
