Corona vaca work: 1 + managers active phones

--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -54,7 +54,7 @@
 "Товар временно отсутствует в продаже"
 ============================== Инфоблоки
 <a href="/about/contact.shtml#map" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a></p>
-<p class="adres time">С понедельника по пятницу, с <b>9</b> до <b>17</b></p>
+<p class="adres time to16">С понедельника по пятницу, с <b>9</b> до <b>17</b> (склад до <b>16</b>)</p>
 <!--<p class="adres time to17">С понедельника по пятницу, с <b>8:30</b> до <b>17:30</b> (склад до <b>17:00</b>)</p>-->
 <!--<p class="adres time">С пн по пт, с <b>8:00</b> до <b>18:00</b> (склад до <b>17:00</b>)</p>-->
 <p class="adres cm">Заявки онлайн круглосуточно
