Corona vaca work: 2

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,6 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>23 апр:  <DD><a href="/catalog/cat14.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные"><span class="title">Гвозди</span></a> и <a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Саморезы по дереву, гипсокартону и тонкому металлу"><span class="title">саморезы</span></a><br>
+  <DT>28 апр:  <DD><a href="/catalog/cat86.shtml"  title="Цены снижены:&#xa;Перчатки Х/Б с ПВХ покрытием &laquo;Волна&raquo; ПРОФИ"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
+  <DT>23 апр:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные"><span class="title">Гвозди</span></a> и <a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Саморезы по дереву, гипсокартону и тонкому металлу"><span class="title">саморезы</span></a><br>
   <DT>05 мар:  <DD><a href="/catalog/cat175.shtml" title="Новые товары:&#xa;Пена монтажная PENOSIL Premium, ручная и пистолетная, 750 мл"><span class="title">Пена монтажная</span></a> и <a href="/catalog/cat194.shtml" title="Новый товар:&#xa;Очиститель для монтажной пены ULTIMA, 500 мл"><span class="title">очиститель</span><span class="dop"></span></a><br>
   <DT>04 мар:  <DD><a href="/catalog/cat295.shtml" title="Новые товары:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл, разные цвета"><span class="title">Аэрозольная эмаль</span><span class="dop"> ULTIMA</span></a><br>
   <DT>20 фев:  <DD><a href="/catalog/cat425.shtml" title="Новые товары:&#xa;Заклепки «слепые» вытяжные алюминиевые для сквозных и глухих отверстий"><span class="title">Заклепки вытяжные</span><span class="dop"></span></a><br>
@@ -12,9 +13,6 @@
   <DT>29 янв:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Свёрла HAGWERT по стеклу и керамике, 2 / 4 грани"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>24 янв:  <DD><a href="/catalog/cat208.shtml" title="Новые товары: Мешки для мусора&#xa;из полиэтилена высокого давления (ПВД), особо прочные"><span class="title">Мешки для мусора</span><span class="dop"></span></a><br>
   <DT>23 янв:  <DD><a href="/catalog/cat14.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
-  <DT>27 дек:  <DD><a href="/catalog/cat142.shtml" title="Цены снижены:&#xa;Валики из искусственного меха,&#xa;ворс 12-14 мм, диаметр корпуса 40 мм"><span class="title">Валики</span><span class="dop"> из искусственного меха</span></a><br>
-  <DT>26 дек:  <DD><a href="/catalog/cat278.shtml" title="Новые товары:&#xa;Провод ПВС белый медный гибкий ГОСТ"><span class="title">Провод ПВС медный</span><span class="dop"> ГОСТ</span></a><br>
-  <DT>25 дек:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые VOLKSHAMMER со стеклопластиковой рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> VOLKSHAMMER</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
