--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 дек:  <DD><a href="/catalog/cat142.shtml" title="Цены снижены:&#xa;Валики из искусственного меха,&#xa;ворс 12-14 мм, диаметр корпуса 40 мм"><span class="title">Валики</span><span class="dop"> из искусственного меха</span></a><br>
+  <DT>26 дек:  <DD><a href="/catalog/cat278.shtml" title="Новые товары:&#xa;Провод ПВС белый медный гибкий ГОСТ"><span class="title">Провод ПВС медный</span><span class="dop"> ГОСТ</span></a><br>
+  <DT>25 дек:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые VOLKSHAMMER со стеклопластиковой рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> VOLKSHAMMER</span></a><br>
   <DT>17 дек:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Буры по бетону для перфоратора SDS Plus HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
   <DT>10 дек:  <DD><a href="/catalog/cat171.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Лестницы-стремянки раздвижные трехсекционные"><span class="title">Лестницы</span></a>, <a href="/catalog/cat170.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стремянки алюминиевые"><span class="title">стремянки</span><span class="dop"></span></a><br>
   <DT>09 дек:  <DD><a href="/catalog/cat29.shtml"  title="Новый товар:&#xa;Пильный диск для УШМ универсальный 125 x 3Т x 22.23 мм RUNNER"><span class="title">Пильный диск для УШМ</span><span class="dop"> RUNNER</span></a><br>
