Corona vaca work: files: def, abr, ...

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,14 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 фев:  <DD><a href="/catalog/cat425.shtml" title="Новые товары:&#xa;Заклепки «слепые» вытяжные алюминиевые для сквозных и глухих отверстий"><span class="title">Заклепки вытяжные</span><span class="dop"></span></a><br>
+  <DT>19 фев:  <DD><a href="/catalog/cat105.shtml" title="Новый товар:&#xa;Тачка строительная двухколесная низкопольная"><span class="title">Строительные тачки</span><span class="dop"></span></a><br>
+  <DT>13 фев:  <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
+  <DT>03 фев:  <DD><a href="/catalog/cat109.shtml" title="Снижены цены: Маркер-краски 'Металлическая краска'&#xa;                              ультра-стойкие, толщина линии 2,2-2,8 мм&#xa;Новые товары:  Маркеры перманентные промышленные&#xa;                              EDDING E-300, толщина линии 1.5-3.0 мм"><span class="title">Строительные маркеры</span></a><br>
+  <DT>31 янв:  <DD><a href="/catalog/cat206.shtml" title="Новый товар:&#xa;Молоток-гвоздодер 500 г VOLKSHAMMER, стеклопластиковая рукоятка"><span class="title">Молоток-гвоздодер</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
+  <DT>30 янв:  <DD><a href="/catalog/cat151.shtml" title="Снижены цены:&#xa;Шпательные лопатки из нержавеющей стали, 100 мм"><span class="title">Шпательные лопатки</span><span class="dop"> 100 мм</span></a><br>
+  <DT>29 янв:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Свёрла HAGWERT по стеклу и керамике, 2 / 4 грани"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
+  <DT>24 янв:  <DD><a href="/catalog/cat208.shtml" title="Новые товары: Мешки для мусора&#xa;из полиэтилена высокого давления (ПВД), особо прочные"><span class="title">Мешки для мусора</span><span class="dop"></span></a><br>
+  <DT>23 янв:  <DD><a href="/catalog/cat14.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>27 дек:  <DD><a href="/catalog/cat142.shtml" title="Цены снижены:&#xa;Валики из искусственного меха,&#xa;ворс 12-14 мм, диаметр корпуса 40 мм"><span class="title">Валики</span><span class="dop"> из искусственного меха</span></a><br>
   <DT>26 дек:  <DD><a href="/catalog/cat278.shtml" title="Новые товары:&#xa;Провод ПВС белый медный гибкий ГОСТ"><span class="title">Провод ПВС медный</span><span class="dop"> ГОСТ</span></a><br>
   <DT>25 дек:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые VOLKSHAMMER со стеклопластиковой рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> VOLKSHAMMER</span></a><br>
