--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,18 +1,16 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>25 мая:  <DD><a href="/catalog/cat263.shtml" title="Новый товар:&#xa;Очки защитные открытого типа прозрачные &laquo;Классик Тим&raquo;"><span class="title">Очки защитные</span><span class="dop"> Классик Тим</span></a><br>
+  <DT>20 мая:  <DD><a href="/catalog/cat27.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>19 мая:  <DD><a href="/catalog/cat24.shtml"  title="Расширен ассортимент:&#xa;Новые диски отрезные по металлу ULTIMA"><span class="title">Диски отрезные по металлу</span><span class="dop"></span></a><br>
+  <DT>18 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды</span><span class="dop"></span></a> и <a href="/catalog/cat407.shtml" title="Цены снижены:&#xa;Краги сварщика спилковые ТРЕК на подкладке красные"><span class="title">краги сварщика</span><span class="dop"></span></a><br>
+  <DT>18 мая:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены:&#xa;Пена монтажная пистолетная профессиональная&#xa;PENOSIL Premium Gunfoam, 750 мл"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
+  <DT>16 мая:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
+  <DT>15 мая:  <DD><a href="/catalog/cat589.shtml" title="Цены снижены"><span class="title">Упаковочные ленты</span><span class="dop"> (скотч)</span></a><br>
   <DT>28 апр:  <DD><a href="/catalog/cat86.shtml"  title="Цены снижены:&#xa;Перчатки Х/Б с ПВХ покрытием &laquo;Волна&raquo; ПРОФИ"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
   <DT>23 апр:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные"><span class="title">Гвозди</span></a> и <a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Саморезы по дереву, гипсокартону и тонкому металлу"><span class="title">саморезы</span></a><br>
   <DT>05 мар:  <DD><a href="/catalog/cat175.shtml" title="Новые товары:&#xa;Пена монтажная PENOSIL Premium, ручная и пистолетная, 750 мл"><span class="title">Пена монтажная</span></a> и <a href="/catalog/cat194.shtml" title="Новый товар:&#xa;Очиститель для монтажной пены ULTIMA, 500 мл"><span class="title">очиститель</span><span class="dop"></span></a><br>
   <DT>04 мар:  <DD><a href="/catalog/cat295.shtml" title="Новые товары:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл, разные цвета"><span class="title">Аэрозольная эмаль</span><span class="dop"> ULTIMA</span></a><br>
-  <DT>20 фев:  <DD><a href="/catalog/cat425.shtml" title="Новые товары:&#xa;Заклепки «слепые» вытяжные алюминиевые для сквозных и глухих отверстий"><span class="title">Заклепки вытяжные</span><span class="dop"></span></a><br>
-  <DT>19 фев:  <DD><a href="/catalog/cat105.shtml" title="Новый товар:&#xa;Тачка строительная двухколесная низкопольная"><span class="title">Строительные тачки</span><span class="dop"></span></a><br>
-  <DT>13 фев:  <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
-  <DT>03 фев:  <DD><a href="/catalog/cat109.shtml" title="Снижены цены: Маркер-краски 'Металлическая краска'&#xa;                              ультра-стойкие, толщина линии 2,2-2,8 мм&#xa;Новые товары:  Маркеры перманентные промышленные&#xa;                              EDDING E-300, толщина линии 1.5-3.0 мм"><span class="title">Строительные маркеры</span></a><br>
-  <DT>31 янв:  <DD><a href="/catalog/cat206.shtml" title="Новый товар:&#xa;Молоток-гвоздодер 500 г VOLKSHAMMER, стеклопластиковая рукоятка"><span class="title">Молоток-гвоздодер</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
-  <DT>30 янв:  <DD><a href="/catalog/cat151.shtml" title="Снижены цены:&#xa;Шпательные лопатки из нержавеющей стали, 100 мм"><span class="title">Шпательные лопатки</span><span class="dop"> 100 мм</span></a><br>
-  <DT>29 янв:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Свёрла HAGWERT по стеклу и керамике, 2 / 4 грани"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
-  <DT>24 янв:  <DD><a href="/catalog/cat208.shtml" title="Новые товары: Мешки для мусора&#xa;из полиэтилена высокого давления (ПВД), особо прочные"><span class="title">Мешки для мусора</span><span class="dop"></span></a><br>
-  <DT>23 янв:  <DD><a href="/catalog/cat14.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
