--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>18 мая:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены:&#xa;Пена монтажная пистолетная профессиональная&#xa;PENOSIL Premium Gunfoam, 750 мл"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
+  <DT>16 мая:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
   <DT>20 фев:  <DD><a href="/catalog/cat425.shtml" title="Новые товары:&#xa;Заклепки «слепые» вытяжные алюминиевые для сквозных и глухих отверстий"><span class="title">Заклепки вытяжные</span><span class="dop"></span></a><br>
   <DT>19 фев:  <DD><a href="/catalog/cat105.shtml" title="Новый товар:&#xa;Тачка строительная двухколесная низкопольная"><span class="title">Строительные тачки</span><span class="dop"></span></a><br>
   <DT>13 фев:  <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
