--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -45,6 +45,7 @@
 <p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
 <p class="price-none">К указанным на сайте ценам могут быть применены скидки.</p>
 ============================== Без Цен: в Альтернативный шаблон, чтоб появилось под заголовком (место дано для .ot37) ======
+<p class="subtit price-none">На данный момент многие диаметры сверел марки Берген отсутствуют. Но всегда в наличии<br>свёрла других брендов со сходным качеством и по приведенным ценам (или ниже).</p>
 <p class="subtit price-none">О наличии товара и действующих ценах осведомляйтесь у менеджеров.</p>
 <p class="subtit price-none">Действующие цены на данные позиции узнавайте у менеджеров.</p>
 <p class="subtit price-none">Количество товара на данный день ограничено остатками на складах.</p>
