--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 июн:  <DD><a href="/catalog/cat188.shtml" title="Цены снижены: Степлеры мебельные (скобозабивные);&#xa;Новые товары: Скобы для степлера калёные, тип 140"><span class="title">Степлеры мебельные и скобы</span><span class="dop"></span></a><br>
   <DT>09 июн:  <DD><a href="/catalog/cat163.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Вёдра резинопластиковые</span><span class="dop"></span></a><br>
   <DT>08 июн:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"> КФ</span></a><br>
   <DT>26 мая:  <DD><a href="/catalog/cat175.shtml" title="Новые товары: Пена монтажная PENOSIL, 750 мл:&#xa;- всесезонная ручная Sila Home Max;&#xa;- огнестойкая ручная и пистолетная Premium Fire Rated (Gun)Foam B1"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
@@ -10,8 +11,6 @@
   <DT>15 мая:  <DD><a href="/catalog/cat589.shtml" title="Цены снижены"><span class="title">Упаковочные ленты</span><span class="dop"> (скотч)</span></a><br>
   <DT>28 апр:  <DD><a href="/catalog/cat86.shtml"  title="Цены снижены:&#xa;Перчатки Х/Б с ПВХ покрытием &laquo;Волна&raquo; ПРОФИ"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
   <DT>23 апр:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные"><span class="title">Гвозди</span></a> и <a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Саморезы по дереву, гипсокартону и тонкому металлу"><span class="title">саморезы</span></a><br>
-  <DT>05 мар:  <DD><a href="/catalog/cat175.shtml" title="Новые товары:&#xa;Пена монтажная PENOSIL Premium, ручная и пистолетная, 750 мл"><span class="title">Пена монтажная</span></a> и <a href="/catalog/cat194.shtml" title="Новый товар:&#xa;Очиститель для монтажной пены ULTIMA, 500 мл"><span class="title">очиститель</span><span class="dop"></span></a><br>
-  <DT>04 мар:  <DD><a href="/catalog/cat295.shtml" title="Новые товары:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл, разные цвета"><span class="title">Аэрозольная эмаль</span><span class="dop"> ULTIMA</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
