--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>26 июн:  <DD><a href="/catalog/cat72.shtml"  title="Новые товары:&#xa;Рулетки геодезические &laquo;ULTIMA&raquo;,&#xa;открытый корпус, металлическая лента"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
+  <DT>23 июн:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
   <DT>15 июн:  <DD><a href="/catalog/cat188.shtml" title="Цены снижены: Степлеры мебельные (скобозабивные);&#xa;Новые товары: Скобы для степлера калёные, тип 140"><span class="title">Степлеры мебельные и скобы</span><span class="dop"></span></a><br>
   <DT>09 июн:  <DD><a href="/catalog/cat163.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Вёдра резинопластиковые</span><span class="dop"></span></a><br>
   <DT>08 июн:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"> КФ</span></a><br>
