--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
+  <DT>13 июл:  <DD><a href="/catalog/cat172.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Коронки по бетону в сборе с центрирующим сверлом:&#xa;- Коронки по бетону, хвостовик SDS+ HAGWERT;&#xa;- Коронка по бетону, хвостовик SDS Max BERGEN;&#xa;- Коронка алмазная по бетону, SDS+ РОСОМАХА;&#xa;- Коронка ударная по армир. бетону, SDS+ РОСОМАХА"><span class="title">Коронки по бетону</span><span class="dop"> в сборе</span></a><br>
   <DT>29 июн:  <DD><a href="/catalog/cat105.shtml" title="Расширен ассортимент:&#xa;Тачки строительные и колёса к ним"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
   <DT>26 июн:  <DD><a href="/catalog/cat72.shtml"  title="Новые товары:&#xa;Рулетки геодезические &laquo;ULTIMA&raquo;,&#xa;открытый корпус, металлическая лента"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
   <DT>23 июн:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
@@ -12,8 +14,6 @@
   <DT>19 мая:  <DD><a href="/catalog/cat24.shtml"  title="Расширен ассортимент:&#xa;Новые диски отрезные по металлу ULTIMA"><span class="title">Диски отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>18 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды</span><span class="dop"></span></a> и <a href="/catalog/cat407.shtml" title="Цены снижены:&#xa;Краги сварщика спилковые ТРЕК на подкладке красные"><span class="title">краги сварщика</span><span class="dop"></span></a><br>
   <DT>15 мая:  <DD><a href="/catalog/cat589.shtml" title="Цены снижены"><span class="title">Упаковочные ленты</span><span class="dop"> (скотч)</span></a><br>
-  <DT>28 апр:  <DD><a href="/catalog/cat86.shtml"  title="Цены снижены:&#xa;Перчатки Х/Б с ПВХ покрытием &laquo;Волна&raquo; ПРОФИ"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
-  <DT>23 апр:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные"><span class="title">Гвозди</span></a> и <a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Саморезы по дереву, гипсокартону и тонкому металлу"><span class="title">саморезы</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
