--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -2,6 +2,8 @@
   <h2>Новинки</h2><DL>
   <DT>18 мая:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены:&#xa;Пена монтажная пистолетная профессиональная&#xa;PENOSIL Premium Gunfoam, 750 мл"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
   <DT>16 мая:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
+  <DT>28 апр:  <DD><a href="/catalog/cat86.shtml"  title="Цены снижены:&#xa;Перчатки Х/Б с ПВХ покрытием &laquo;Волна&raquo; ПРОФИ"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
+  <DT>23 апр:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные"><span class="title">Гвозди</span></a> и <a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Саморезы по дереву, гипсокартону и тонкому металлу"><span class="title">саморезы</span></a><br>
   <DT>05 мар:  <DD><a href="/catalog/cat175.shtml" title="Новые товары:&#xa;Пена монтажная PENOSIL Premium, ручная и пистолетная, 750 мл"><span class="title">Пена монтажная</span></a> и <a href="/catalog/cat194.shtml" title="Новый товар:&#xa;Очиститель для монтажной пены ULTIMA, 500 мл"><span class="title">очиститель</span><span class="dop"></span></a><br>
   <DT>04 мар:  <DD><a href="/catalog/cat295.shtml" title="Новые товары:&#xa;Аэрозольная эмаль универсальная ULTIMA, 520 мл, разные цвета"><span class="title">Аэрозольная эмаль</span><span class="dop"> ULTIMA</span></a><br>
   <DT>20 фев:  <DD><a href="/catalog/cat425.shtml" title="Новые товары:&#xa;Заклепки «слепые» вытяжные алюминиевые для сквозных и глухих отверстий"><span class="title">Заклепки вытяжные</span><span class="dop"></span></a><br>
