news in 295 -> iblk/Rek + rul. Bad key, no time!!!

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -20,6 +20,17 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/shmal/big/aero-ultima.png" title="Большое фото: Аэрозольная эмаль универсальная 'ULTIMA'">
+        <img src="/img/pic/shmal/small/aero-ultima_w.png" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat295.shtml"
+        title="Большое фото: Аэрозольная эмаль универсальная 'ULTIMA' на нашем сайте">
+        <p>
+          <span class="title">Аэрозольные<br>эмаль универсальная<br>и краска-грунт</span><span class="dop"><br>ULTIMA,</span>
+          <span class="addt"> 520 мл</span>
+        </p></a></td></table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
         href="/img/pic/drill/big/cobalt-sverlo.jpg" title="Большое фото: Твердосплавные свёрла по металлу 'HAGWERT'">
         <img src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat415.shtml"
