... ... + # 444 type -> std. Bad key, no time!!!

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 июл:  <DD><a href="/catalog/cat597.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Стрейч &mdash; Паллетная плёнка полимерная"><span class="title">Паллетная плёнка</span><span class="dop"> стрейч</span></a><br>
+  <DT>24 июл:  <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Новые диски алмазные ТУРБО, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
   <DT>13 июл:  <DD><a href="/catalog/cat172.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Коронки по бетону в сборе с центрирующим сверлом:&#xa;- Коронки по бетону, хвостовик SDS+ HAGWERT;&#xa;- Коронка по бетону, хвостовик SDS Max BERGEN;&#xa;- Коронка алмазная по бетону, SDS+ РОСОМАХА;&#xa;- Коронка ударная по армир. бетону, SDS+ РОСОМАХА"><span class="title">Коронки по бетону</span><span class="dop"> в сборе</span></a><br>
   <DT>29 июн:  <DD><a href="/catalog/cat105.shtml" title="Расширен ассортимент:&#xa;Тачки строительные и колёса к ним"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
@@ -10,10 +12,6 @@
   <DT>08 июн:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"> КФ</span></a><br>
   <DT>26 мая:  <DD><a href="/catalog/cat175.shtml" title="Новые товары: Пена монтажная PENOSIL, 750 мл:&#xa;- всесезонная ручная Sila Home Max;&#xa;- огнестойкая ручная и пистолетная Premium Fire Rated (Gun)Foam B1"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
   <DT>25 мая:  <DD><a href="/catalog/cat263.shtml" title="Новый товар:&#xa;Очки защитные открытого типа прозрачные &laquo;Классик Тим&raquo;"><span class="title">Очки защитные</span><span class="dop"> Классик Тим</span></a><br>
-  <DT>20 мая:  <DD><a href="/catalog/cat27.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
-  <DT>19 мая:  <DD><a href="/catalog/cat24.shtml"  title="Расширен ассортимент:&#xa;Новые диски отрезные по металлу ULTIMA"><span class="title">Диски отрезные по металлу</span><span class="dop"></span></a><br>
-  <DT>18 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды</span><span class="dop"></span></a> и <a href="/catalog/cat407.shtml" title="Цены снижены:&#xa;Краги сварщика спилковые ТРЕК на подкладке красные"><span class="title">краги сварщика</span><span class="dop"></span></a><br>
-  <DT>15 мая:  <DD><a href="/catalog/cat589.shtml" title="Цены снижены"><span class="title">Упаковочные ленты</span><span class="dop"> (скотч)</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -23,7 +21,7 @@
         href="/img/pic/shmal/big/aero-ultima.png" title="Большое фото: Аэрозольная эмаль универсальная 'ULTIMA'">
         <img src="/img/pic/shmal/small/aero-ultima_w.png" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat295.shtml"
-        title="Большое фото: Аэрозольная эмаль универсальная 'ULTIMA' на нашем сайте">
+        title="Аэрозольная эмаль универсальная 'ULTIMA' на нашем сайте">
         <p>
           <span class="title">Аэрозольные<br>эмаль универсальная<br>и краска-грунт</span><span class="dop"><br>ULTIMA,</span>
           <span class="addt"> 520 мл</span>
@@ -34,7 +32,7 @@
         href="/img/pic/drill/big/cobalt-sverlo.jpg" title="Большое фото: Твердосплавные свёрла по металлу 'HAGWERT'">
         <img src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat415.shtml"
-        title="Большое фото: Твердосплавные свёрла по металлу 'HAGWERT' на нашем сайте">
+        title="Твердосплавные свёрла по металлу 'HAGWERT' на нашем сайте">
         <p>
           <span class="title">Твердосплавные свёрла по металлу</span><span class="dop"><br>HAGWERT<br>"Power-Сobalt"</span>
           <span class="addt"><br>фрезерованные шлифованные</span>
