--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,10 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 мая:  <DD><a href="/catalog/cat27.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>19 мая:  <DD><a href="/catalog/cat24.shtml"  title="Расширен ассортимент:&#xa;Новые диски отрезные по металлу ULTIMA"><span class="title">Диски отрезные по металлу</span><span class="dop"></span></a><br>
+  <DT>18 мая:  <DD><a href="/catalog/cat45.shtml"  title="Цены снижены:&#xa;Электроды сварочные пр-ва завода СпецЭлектрод"><span class="title">Электроды</span><span class="dop"></span></a> и <a href="/catalog/cat407.shtml" title="Цены снижены:&#xa;Краги сварщика спилковые ТРЕК на подкладке красные"><span class="title">краги сварщика</span><span class="dop"></span></a><br>
   <DT>18 мая:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены:&#xa;Пена монтажная пистолетная профессиональная&#xa;PENOSIL Premium Gunfoam, 750 мл"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
+  <DT>15 мая:  <DD><a href="/catalog/cat589.shtml" title="Цены снижены"><span class="title">Упаковочные ленты</span><span class="dop"> (скотч)</span></a><br>
   <DT>16 мая:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"></span></a><br>
   <DT>28 апр:  <DD><a href="/catalog/cat86.shtml"  title="Цены снижены:&#xa;Перчатки Х/Б с ПВХ покрытием &laquo;Волна&raquo; ПРОФИ"><span class="title">Перчатки Х/Б с ПВХ покрытием</span><span class="dop"></span></a><br>
   <DT>23 апр:  <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные"><span class="title">Гвозди</span></a> и <a href="/catalog/cat18.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Саморезы по дереву, гипсокартону и тонкому металлу"><span class="title">саморезы</span></a><br>
