... ... + defences Bad key, no time!!!

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>04 авг : <DD><a href="/catalog/cat30.shtml"  title="Цены снижены:&#xa;Шлифовальная шкурка в рулонах, на тканевой основе, водостойкая&#xa;ГОСТ 13344-79, пр-во г. Белгород"><span class="title">Шлифовальная шкурка</span><span class="dop" style="font-size: smaller"> в рулонах</span></a><br>
   <DT>27 июл:  <DD><a href="/catalog/cat597.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Стрейч &mdash; Паллетная плёнка полимерная"><span class="title">Паллетная плёнка</span><span class="dop"> стрейч</span></a><br>
   <DT>24 июл:  <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Новые диски алмазные ТУРБО, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
@@ -10,8 +11,6 @@
   <DT>15 июн:  <DD><a href="/catalog/cat188.shtml" title="Цены снижены: Степлеры мебельные (скобозабивные);&#xa;Новые товары: Скобы для степлера калёные, тип 140"><span class="title">Степлеры мебельные и скобы</span><span class="dop"></span></a><br>
   <DT>09 июн:  <DD><a href="/catalog/cat163.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Вёдра резинопластиковые</span><span class="dop"></span></a><br>
   <DT>08 июн:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"> КФ</span></a><br>
-  <DT>26 мая:  <DD><a href="/catalog/cat175.shtml" title="Новые товары: Пена монтажная PENOSIL, 750 мл:&#xa;- всесезонная ручная Sila Home Max;&#xa;- огнестойкая ручная и пистолетная Premium Fire Rated (Gun)Foam B1"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
-  <DT>25 мая:  <DD><a href="/catalog/cat263.shtml" title="Новый товар:&#xa;Очки защитные открытого типа прозрачные &laquo;Классик Тим&raquo;"><span class="title">Очки защитные</span><span class="dop"> Классик Тим</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
