... ... + BERGEN cups iblk + del till 16:00 Bad key, no time!!!

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 сен:  <DD><a href="/catalog/cat189.shtml" title="Цены снижены:&#xa;Чашки алмазные зачистные BERGEN:&#xa;TURBO, двухрядная, 'БУМЕРАНГ'"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat221.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпатели фасадные и шпательные лопатки"><span class="title">Шпатели</span><span class="dop"> профессиональные</span></a><br>
   <DT>10 авг : <DD><a href="/catalog/cat177.shtml" title="Цены снижены:&#xa;Изолента ПВХ HOBBI, разные цвета и размеры"><span class="title">Изолента ПВХ</span><span class="dop"></span></a><br>
   <DT>06 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
@@ -11,9 +12,6 @@
   <DT>29 июн:  <DD><a href="/catalog/cat105.shtml" title="Расширен ассортимент:&#xa;Тачки строительные и колёса к ним"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
   <DT>26 июн:  <DD><a href="/catalog/cat72.shtml"  title="Новые товары:&#xa;Рулетки геодезические &laquo;ULTIMA&raquo;,&#xa;открытый корпус, металлическая лента"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
   <DT>23 июн:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
-  <DT>15 июн:  <DD><a href="/catalog/cat188.shtml" title="Цены снижены: Степлеры мебельные (скобозабивные);&#xa;Новые товары: Скобы для степлера калёные, тип 140"><span class="title">Степлеры мебельные и скобы</span><span class="dop"></span></a><br>
-  <DT>09 июн:  <DD><a href="/catalog/cat163.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Вёдра резинопластиковые</span><span class="dop"></span></a><br>
-  <DT>08 июн:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"> КФ</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
