--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 июн:  <DD><a href="/catalog/cat188.shtml" title="Цены снижены: Степлеры мебельные (скобозабивные);&#xa;Новые товары: Скобы для степлера калёные, тип 140"><span class="title">Степлеры мебельные и скобы</span><span class="dop"></span></a><br>
+  <DT>09 июн:  <DD><a href="/catalog/cat163.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Вёдра резинопластиковые</span><span class="dop"></span></a><br>
+  <DT>08 июн:  <DD><a href="/catalog/cat52.shtml"  title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"> КФ</span></a><br>
   <DT>26 мая:  <DD><a href="/catalog/cat175.shtml" title="Новые товары: Пена монтажная PENOSIL, 750 мл:&#xa;- всесезонная ручная Sila Home Max;&#xa;- огнестойкая ручная и пистолетная Premium Fire Rated (Gun)Foam B1"><span class="title">Пена монтажная</span><span class="dop"> PENOSIL</span></a><br>
   <DT>25 мая:  <DD><a href="/catalog/cat263.shtml" title="Новый товар:&#xa;Очки защитные открытого типа прозрачные &laquo;Классик Тим&raquo;"><span class="title">Очки защитные</span><span class="dop"> Классик Тим</span></a><br>
   <DT>20 мая:  <DD><a href="/catalog/cat27.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
