--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>21 сен:  <DD><a href="/catalog/cat28.shtml" title="Цены снижены:&#xa;Диски алмазные 'РОСОМАХА'"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
+  <DT>19 сен:  <DD><a href="/catalog/cat78.shtml"  title="Цены снижены:&#xa;Свёрла по дереву перьевые 'BERGEN'"><span class="title">Свёрла</span><span class="dop"></span></a> <a href="/catalog/cat422.shtml" title="Цены снижены:&#xa;Свёрла по дереву спиральные 'BERGEN'"><span class="title">по дереву</span><span class="dop"> BERGEN</span></a><br>
   <DT>03 сен:  <DD><a href="/catalog/cat189.shtml" title="Цены снижены:&#xa;Чашки алмазные зачистные BERGEN:&#xa;TURBO, двухрядная, 'БУМЕРАНГ'"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat221.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпатели фасадные и шпательные лопатки"><span class="title">Шпатели</span><span class="dop"> профессиональные</span></a><br>
   <DT>10 авг : <DD><a href="/catalog/cat177.shtml" title="Цены снижены:&#xa;Изолента ПВХ HOBBI, разные цвета и размеры"><span class="title">Изолента ПВХ</span><span class="dop"></span></a><br>
@@ -9,9 +11,6 @@
   <DT>24 июл:  <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Новые диски алмазные ТУРБО, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
   <DT>13 июл:  <DD><a href="/catalog/cat172.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Коронки по бетону в сборе с центрирующим сверлом:&#xa;- Коронки по бетону, хвостовик SDS+ HAGWERT;&#xa;- Коронка по бетону, хвостовик SDS Max BERGEN;&#xa;- Коронка алмазная по бетону, SDS+ РОСОМАХА;&#xa;- Коронка ударная по армир. бетону, SDS+ РОСОМАХА"><span class="title">Коронки по бетону</span><span class="dop"> в сборе</span></a><br>
-  <DT>29 июн:  <DD><a href="/catalog/cat105.shtml" title="Расширен ассортимент:&#xa;Тачки строительные и колёса к ним"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
-  <DT>26 июн:  <DD><a href="/catalog/cat72.shtml"  title="Новые товары:&#xa;Рулетки геодезические &laquo;ULTIMA&raquo;,&#xa;открытый корпус, металлическая лента"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
-  <DT>23 июн:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -64,7 +63,7 @@
       <td align="center" width=1><a class="cboxElement"
         href="/img/pic/drill/big/Koronka po keramike art 576230 newe ru.jpg" title="Большое фото: Алмазные коронки по керамограниту и керамике 'HAGWERT'">
         <img src="/img/pic/drill/small/Koronka po keramike art 576230 newe ru.jpg" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat420.shtml"
+      <td class="good-txt"><a href="/catalog/cat299.shtml"
         title="Свёрла и коронки по стеклу и керамике на нашем сайте">
         <p>
           <span class="title">Алмазные коронки по керамограниту<br>и керамике</span><span class="dop"> HAGWERT</span>
